# polysolver

./: LICENSE  README.md  polysolve.py  pyproject.toml
.github/workflows/: test_florp.yml
polysolve/: __init__.py  polysolve.py
tests/: test_quadratic.py
