[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polysolve"
authors = [{name = "matea", email = "tea.bjorklund@stfc.ac.uk"}]
requires-python = ">= 3.8"
readme = "README.md"
description = ""
license = {text = "BSD-3-Clause"}

keywords = []
dependencies = ["numpy"]
classifiers = []
dynamic = ["version"]

[project.urls]
Homepage="https://github.com/xmatea/polysolve"
Repository="https://github.com/xmatea/polysolve.git"

[tool.setuptools.dynamic]
version = {attr = "polysolve.__version__"}

[project.optional-dependencies]
docs = ["sphinx",
    "sphinx_rtd_theme",
    "sphinx_autodoc_typehints"]
